WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299372
REGRESSION(
292078@main
): [Cropped] Rendering issues on cryptopad
https://bugs.webkit.org/show_bug.cgi?id=299372
Summary
REGRESSION(292078@main): [Cropped] Rendering issues on cryptopad
alan
Reported
2025-09-23 08:00:57 PDT
<
rdar://159638640
>
Attachments
Patch
(6.38 KB, patch)
2025-09-23 08:03 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.92 KB, patch)
2025-09-23 08:05 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(8.80 KB, patch)
2025-09-23 13:20 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-09-23 08:03:25 PDT
Created
attachment 476835
[details]
Patch
alan
Comment 2
2025-09-23 08:05:40 PDT
Created
attachment 476836
[details]
Patch
Alexey Proskuryakov
Comment 3
2025-09-23 09:56:57 PDT
Can a test be added for this?
alan
Comment 4
2025-09-23 13:20:20 PDT
Created
attachment 476841
[details]
[fast-cq]Patch
EWS
Comment 5
2025-09-23 16:46:53 PDT
Committed
300433@main
(9364589b92a2): <
https://commits.webkit.org/300433@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 476841
[details]
.
Tim Nguyen (:ntim)
Comment 6
2025-09-25 09:02:55 PDT
Re-opening for pull request
https://github.com/apple/WebKit/pull/3699
EWS
Comment 7
2025-09-29 13:18:46 PDT
Committed
297297.483@safari-7622-branch
(b848b47722d2): <
https://commits.webkit.org/297297.483@safari-7622-branch
> Reviewed commits have been landed. Closing PR #3699 and removing active labels.
alan
Comment 8
2025-10-19 19:51:32 PDT
***
Bug 300866
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug