REGRESSION(292078@main): [Cropped] Rendering issues on cryptopad https://bugs.webkit.org/show_bug.cgi?id=299372 <rdar://159638640>

This is a revert of 288186@main (and 292078@main which was a follow-up fix on 288186@main).

Reviewed by Antti Koivisto.

Test: fast/flexbox/flex-item-percent-container-with-subtree-layout.html
* LayoutTests/fast/flexbox/flex-item-percent-container-with-subtree-layout-expected.html: Added.
* LayoutTests/fast/flexbox/flex-item-percent-container-with-subtree-layout.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::hasAutoHeightOrContainingBlockWithAutoHeight const):
* Source/WebCore/rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::layoutBlock):
(WebCore::RenderFlexibleBox::canUseFlexItemForPercentageResolution):
(WebCore::RenderFlexibleBox::canUseFlexItemForPercentageResolutionByStyle):
(WebCore::RenderFlexibleBox::usedFlexItemOverridingLogicalHeightForPercentageResolution):
* Source/WebCore/rendering/RenderFlexibleBox.h:

Canonical link: https://commits.webkit.org/300433@main