Source/WebCore/rendering/RenderFlexibleBox.h
@@ -74,6 +74,7 @@ public:
     
     std::optional<LayoutUnit> usedFlexItemOverridingLogicalHeightForPercentageResolution(const RenderBox&);
     bool canUseFlexItemForPercentageResolution(const RenderBox&);
+    bool canUseFlexItemForPercentageResolutionByStyle(const RenderBox&);
 
     void clearCachedMainSizeForFlexItem(const RenderBox& flexItem);
     
@@ -350,7 +351,6 @@ private:
     bool m_inLayout { false };
     bool m_inCrossAxisLayout { false };
     bool m_inFlexItemLayout { false };
-    bool m_inSimplifiedLayout { false };
     bool m_inPostFlexUpdateScrollbarLayout { false };
     mutable bool m_inFlexItemIntrinsicWidthComputation { false };
     bool m_shouldResetFlexItemLogicalHeightBeforeLayout { false };
